--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,4 +21,7 @@
 	<dimen name="dots_height">5dp</dimen>
 	<dimen name="list_item_height">56dp</dimen>
 	<dimen name="list_vertical_padding">8dp</dimen>
+
+	<dimen name="interesting_anime_card_width">200dp</dimen>
+	<dimen name="interesting_anime_card_height">160dp</dimen>
 </resources>
